--- a/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
+++ b/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
@@ -242,6 +242,7 @@
     "EnterDocumentNumber": "Belge No Girin",
     "EnterPrincipalDebtor": "Asıl Borçlu Girin",
     "EnterEndorser": "Ciranta Girin",
-    "Cash": "Nakit"
+    "Cash": "Nakit",
+    "BankBranchCards": "Banka Şube Kartları"
   }
 }
