--- a/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
+++ b/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
@@ -71,7 +71,7 @@
     "NetTotal": "Net Toplam",
     "Date": "Tarih",
     "ReceiptType": "Makbuz Tipi",
-    "ReceiptNumber": "Makbuz Numarası",
+    "ReceiptNumber": "Makbuz No",
     "Safe": "Kasa",
     "BankAccount": "Banka Hesabı",
     "ChequeTotal": "Çek Toplam",
