--- a/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
+++ b/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
@@ -243,6 +243,7 @@
     "EnterPrincipalDebtor": "Asıl Borçlu Girin",
     "EnterEndorser": "Ciranta Girin",
     "Cash": "Nakit",
-    "BankBranchCards": "Banka Şube Kartları"
+    "BankBranchCards": "Banka Şube Kartları",
+    "MyDocument": "Kendi Belgemiz"
   }
 }
