--- a/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
+++ b/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
@@ -248,6 +248,8 @@
     "PaymentReceiptCards": "Ödeme Makbuzu Kartları",
     "NewDocument": "Yeni Belge",
     "Endorsement": "Ciro Etme",
-    "ChooseTransactionType": "İşlem Türünü Seç"
+    "ChooseTransactionType": "İşlem Türünü Seç",
+    "CashTransactionReceiptCards": "Kasa İşlem Makbuz Kartları"
+
   }
 }
