--- a/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/en-GB.json
+++ b/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/en-GB.json
@@ -269,6 +269,7 @@
     "Receipt": "Receipt",
     "Invoice": "Invoice",
     "DocumentType": "Document Type",
-    "MoventType": "Movent Type"
+    "MoventType": "Movent Type",
+    "StoreTransactions": "Store Transactions"
   }
 }
