--- a/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
+++ b/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
@@ -269,6 +269,7 @@
     "Receipt": "Makbuz",
     "Invoice": "Fatura",
     "DocumentType": "Belge Türü",
-    "MoventType": "Hareket Türü"
+    "MoventType": "Hareket Türü",
+    "StoreTransactions": "Store Transactions"
   }
 }
