--- a/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/en.json
+++ b/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/en.json
@@ -270,6 +270,7 @@
     "Invoice": "Invoice",
     "DocumentType": "Document Type",
     "MoventType": "Movent Type",
-    "StoreTransactions": "Store Transactions"
+    "StoreTransactions": "Store Transactions",
+    "ServiceTransactions": "Service Transactions"
   }
 }
