--- a/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/en.json
+++ b/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/en.json
@@ -271,6 +271,8 @@
     "DocumentType": "Document Type",
     "MoventType": "Movent Type",
     "StoreTransactions": "Store Transactions",
-    "ServiceTransactions": "Service Transactions"
+    "ServiceTransactions": "Service Transactions",
+    "ExpenseTransactions": "Expense Transactions",
+    "StockTransactions": "Stock Transactions"
   }
 }
