--- a/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/en-GB.json
+++ b/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/en-GB.json
@@ -277,6 +277,8 @@
     "ReportName": "Report Name",
     "SelectReport": "Select Report",
     "ReportPreview": "Report Preview",
-    "TemplateName": "Template Name"
+    "TemplateName": "Template Name",
+    "NotAuthorized": "Not Authorized",
+    "NothingAddress": "Nothing Address"
   }
 }
