--- a/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
+++ b/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
@@ -35,6 +35,104 @@
     "Enum:ReceiptType:4": "Banka İşlem",
     "Enum:InvoiceType:1": "Alış Faturası",
     "Enum:InvoiceType:2": "Satış Faturası",
+    "Permission:Accountancy": "Ön Muhasebe",
+    "Permission:Bank_": "Bankalar",
+    "Permission:Bank_.Create": "Ekleme",
+    "Permission:Bank_.Update": "Güncelle",
+    "Permission:Bank_.Delete": "Silme",
+    "Permission:Bank_.Transaction": "Hareketler",
+    "Permission:Bank_.Print": "Yazdırma",
+    "Permission:BankAccount": "Banka Hesapları",
+    "Permission:BankAccount.Create": "Ekleme",
+    "Permission:BankAccount.Update": "Güncelle",
+    "Permission:BankAccount.Delete": "Silme",
+    "Permission:BankAccount.Transaction": "Hareketler",
+    "Permission:BankAccount.Print": "Yazdırma",
+    "Permission:BankDepartment": "Banka Şubeleri",
+    "Permission:BankDepartment.Create": "Ekleme",
+    "Permission:BankDepartment.Update": "Güncelle",
+    "Permission:BankDepartment.Delete": "Silme",
+    "Permission:BankDepartment.Transaction": "Hareketler",
+    "Permission:BankDepartment.Print": "Yazdırma",
+    "Permission:Unit": "Birim",
+    "Permission:Unit.Create": "Ekleme",
+    "Permission:Unit.Update": "Güncelle",
+    "Permission:Unit.Delete": "Silme",
+    "Permission:Unit.Transaction": "Hareketler",
+    "Permission:Unit.Print": "Yazdırma",
+    "Permission:Current": "Cari",
+    "Permission:Current.Create": "Ekleme",
+    "Permission:Current.Update": "Güncelle",
+    "Permission:Current.Delete": "Silme",
+    "Permission:Current.Transaction": "Hareketler",
+    "Permission:Current.Print": "Yazdırma",
+    "Permission:Term": "Dönem",
+    "Permission:Term.Create": "Ekleme",
+    "Permission:Term.Update": "Güncelle",
+    "Permission:Term.Delete": "Silme",
+    "Permission:Term.Transaction": "Hareketler",
+    "Permission:Term.Print": "Yazdırma",
+    "Permission:Invoice": "Fatura",
+    "Permission:Invoice.Create": "Ekleme",
+    "Permission:Invoice.Update": "Güncelle",
+    "Permission:Invoice.Delete": "Silme",
+    "Permission:Invoice.Transaction": "Hareketler",
+    "Permission:Invoice.Print": "Yazdırma",
+    "Permission:Store": "Depo",
+    "Permission:Store.Create": "Ekleme",
+    "Permission:Store.Update": "Güncelle",
+    "Permission:Store.Delete": "Silme",
+    "Permission:Store.Transaction": "Hareketler",
+    "Permission:Store.Print": "Yazdırma",
+    "Permission:Service": "Hizmet",
+    "Permission:Service.Create": "Ekleme",
+    "Permission:Service.Update": "Güncelle",
+    "Permission:Service.Delete": "Silme",
+    "Permission:Service.Transaction": "Hareketler",
+    "Permission:Service.Print": "Yazdırma",
+    "Permission:Safe": "Kasa",
+    "Permission:Safe.Create": "Ekleme",
+    "Permission:Safe.Update": "Güncelle",
+    "Permission:Safe.Delete": "Silme",
+    "Permission:Safe.Transaction": "Hareketler",
+    "Permission:Safe.Print": "Yazdırma",
+    "Permission:Receipt": "Makbuz",
+    "Permission:Receipt.Create": "Ekleme",
+    "Permission:Receipt.Update": "Güncelle",
+    "Permission:Receipt.Delete": "Silme",
+    "Permission:Receipt.Transaction": "Hareketler",
+    "Permission:Receipt.Print": "Yazdırma",
+    "Permission:Expense": "Masraf",
+    "Permission:Expense.Create": "Ekleme",
+    "Permission:Expense.Update": "Güncelle",
+    "Permission:Expense.Delete": "Silme",
+    "Permission:Expense.Transaction": "Hareketler",
+    "Permission:Expense.Print": "Yazdırma",
+    "Permission:PaymentDocument": "Ödeme Belgeleri",
+    "Permission:PaymentDocument.Create": "Ekleme",
+    "Permission:PaymentDocument.Update": "Güncelle",
+    "Permission:PaymentDocument.Delete": "Silme",
+    "Permission:PaymentDocument.Transaction": "Hareketler",
+    "Permission:PaymentDocument.Print": "Yazdırma",
+    "Permission:SpecialCode": "Özel Kodlar",
+    "Permission:SpecialCode.Create": "Ekleme",
+    "Permission:SpecialCode.Update": "Güncelle",
+    "Permission:SpecialCode.Delete": "Silme",
+    "Permission:SpecialCode.Transaction": "Hareketler",
+    "Permission:SpecialCode.Print": "Yazdırma",
+    "Permission:Stock": "Stok",
+    "Permission:Stock.Create": "Ekleme",
+    "Permission:Stock.Update": "Güncelle",
+    "Permission:Stock.Delete": "Silme",
+    "Permission:Stock.Transaction": "Hareketler",
+    "Permission:Stock.Print": "Yazdırma",
+    "Permission:Department": "Şubeler",
+    "Permission:Department.Create": "Ekleme",
+    "Permission:Department.Update": "Güncelle",
+    "Permission:Department.Delete": "Silme",
+    "Permission:Department.Transaction": "Hareketler",
+    "Permission:Department.Print": "Yazdırma",
+    "Permission:Management": "Yönetim",
     "Code": "Kod",
     "Name": "Ad",
     "BankAccountType": "Banka Hesap Tipi",
