--- a/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/en.json
+++ b/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/en.json
@@ -35,6 +35,104 @@
     "Enum:ReceiptType:4": "Bank Operation",
     "Enum:InvoiceType:1": "Buy Invoice",
     "Enum:InvoiceType:2": "Sell Invoice",
+    "Permission:Accountancy": "Accountancy",
+    "Permission:Bank_": "Banks",
+    "Permission:Bank_.Create": "Create",
+    "Permission:Bank_.Update": "Update",
+    "Permission:Bank_.Delete": "Delete",
+    "Permission:Bank_.Transaction": "Transaction",
+    "Permission:Bank_.Print": "Print",
+    "Permission:BankAccount": "Bank Account",
+    "Permission:BankAccount.Create": "Create",
+    "Permission:BankAccount.Update": "Update",
+    "Permission:BankAccount.Delete": "Delete",
+    "Permission:BankAccount.Transaction": "Transaction",
+    "Permission:BankAccount.Print": "Print",
+    "Permission:BankDepartment": "Bank Department",
+    "Permission:BankDepartment.Create": "Create",
+    "Permission:BankDepartment.Update": "Update",
+    "Permission:BankDepartment.Delete": "Delete",
+    "Permission:BankDepartment.Transaction": "Transaction",
+    "Permission:BankDepartment.Print": "Print",
+    "Permission:Unit": "Unit",
+    "Permission:Unit.Create": "Create",
+    "Permission:Unit.Update": "Update",
+    "Permission:Unit.Delete": "Delete",
+    "Permission:Unit.Transaction": "Transaction",
+    "Permission:Unit.Print": "Print",
+    "Permission:Current": "Current",
+    "Permission:Current.Create": "Create",
+    "Permission:Current.Update": "Update",
+    "Permission:Current.Delete": "Delete",
+    "Permission:Current.Transaction": "Transaction",
+    "Permission:Current.Print": "Print",
+    "Permission:Term": "Term",
+    "Permission:Term.Create": "Create",
+    "Permission:Term.Update": "Update",
+    "Permission:Term.Delete": "Delete",
+    "Permission:Term.Transaction": "Transaction",
+    "Permission:Term.Print": "Print",
+    "Permission:Invoice": "Invoice",
+    "Permission:Invoice.Create": "Create",
+    "Permission:Invoice.Update": "Update",
+    "Permission:Invoice.Delete": "Delete",
+    "Permission:Invoice.Transaction": "Transaction",
+    "Permission:Invoice.Print": "Print",
+    "Permission:Store": "Store",
+    "Permission:Store.Create": "Create",
+    "Permission:Store.Update": "Update",
+    "Permission:Store.Delete": "Delete",
+    "Permission:Store.Transaction": "Transaction",
+    "Permission:Store.Print": "Print",
+    "Permission:Service": "Service",
+    "Permission:Service.Create": "Create",
+    "Permission:Service.Update": "Update",
+    "Permission:Service.Delete": "Delete",
+    "Permission:Service.Transaction": "Transaction",
+    "Permission:Service.Print": "Print",
+    "Permission:Safe": "Safe",
+    "Permission:Safe.Create": "Create",
+    "Permission:Safe.Update": "Update",
+    "Permission:Safe.Delete": "Delete",
+    "Permission:Safe.Transaction": "Transaction",
+    "Permission:Safe.Print": "Print",
+    "Permission:Receipt": "Receipt",
+    "Permission:Receipt.Create": "Create",
+    "Permission:Receipt.Update": "Update",
+    "Permission:Receipt.Delete": "Delete",
+    "Permission:Receipt.Transaction": "Transaction",
+    "Permission:Receipt.Print": "Print",
+    "Permission:Expense": "Expense",
+    "Permission:Expense.Create": "Create",
+    "Permission:Expense.Update": "Update",
+    "Permission:Expense.Delete": "Delete",
+    "Permission:Expense.Transaction": "Transaction",
+    "Permission:Expense.Print": "Print",
+    "Permission:PaymentDocument": "Payment Documents",
+    "Permission:PaymentDocument.Create": "Create",
+    "Permission:PaymentDocument.Update": "Update",
+    "Permission:PaymentDocument.Delete": "Delete",
+    "Permission:PaymentDocument.Transaction": "Transaction",
+    "Permission:PaymentDocument.Print": "Print",
+    "Permission:SpecialCode": "Special Code",
+    "Permission:SpecialCode.Create": "Create",
+    "Permission:SpecialCode.Update": "Update",
+    "Permission:SpecialCode.Delete": "Delete",
+    "Permission:SpecialCode.Transaction": "Transaction",
+    "Permission:SpecialCode.Print": "Print",
+    "Permission:Stock": "Stock",
+    "Permission:Stock.Create": "Create",
+    "Permission:Stock.Update": "Update",
+    "Permission:Stock.Delete": "Delete",
+    "Permission:Stock.Transaction": "Transaction",
+    "Permission:Stock.Print": "Print",
+    "Permission:Department": "Departments",
+    "Permission:Department.Create": "Create",
+    "Permission:Department.Update": "Update",
+    "Permission:Department.Delete": "Delete",
+    "Permission:Department.Transaction": "Transaction",
+    "Permission:Department.Print": "Print",
+    "Permission:Management": "Management",
     "Code": "Code",
     "Name": "Name",
     "BankAccountType": "Bank Account Type",
