--- a/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
+++ b/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
@@ -381,6 +381,7 @@
     "NothingAddress": "Bu Sayfa Bulunamadı.",
     "ManageProfile": "Profilinizi Yönetin",
     "Logout": "Çıkış",
-    "Login": "Giriş"
+    "Login": "Giriş",
+    "DepartmentAndTermSelect": "Şube ve Dönem Seçimi"
   }
 }
