--- a/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
+++ b/src/MK.Accountancy.Domain.Shared/Localization/Accountancy/tr.json
@@ -2,7 +2,15 @@
   "culture": "tr",
   "texts": {
     "Menu:Home": "Ana sayfa",
-    "Welcome": "Hoşgeldiniz",
+    "IndexPage_1": "Merhaba.",
+    "IndexPage_2": "Ön Muhasebe eğitim setine hoş geldiniz.",
+    "IndexPage_3": "Bu sayfa bu projenin tanıtım sayfasıdır. Projenin tanıtımıyla ilgili tüm içerik bu sayfada gösterilecektir.",
+    "IndexPage_4": "Birim, Banka, Banka Şube, Banka Hesap, Cari, Kasa, Depo, Stok, Hizmet, Masraf... vb. ayrı ayrı kartlar oluşturabilme imkanı.",
+    "IndexPage_5": "Hem alış hem de satış faturalarını ayrı ayrı girilebilme imkanı. Satış faturalarının baskı önizleme yapılarak çıktısının alınabilme imkanı.",
+    "IndexPage_6": "Ödeme belgeleriyle ilgili tüm işlemlerin türüne göre ayrı ayrı makbuzlarda takip edilebilme imkanı. Tahsilat Makbuzu, Ödeme Makbuzu... vb.",
+    "IndexPage_7": "Hem kendi hem de müşterilerden alınan ödeme belgelerinin ayrı ayrı takip edilebilme imkanı. (Çek, Senet, Nakit, Havale, Pos vb.)",
+    "IndexPage_8": "Sınırsız sayıda rapor oluşturup kullanabilme imkanı.",
+    "IndexPage_9": "Rol bazlı ve kullanıcı bazlı yetkilendirme sistemi.",
     "LongWelcomeMessage": "Uygulamaya hoşgeldiniz. Bu, ABP framework'ü üzerine bina edilmiş bir başlangıç projesidir. Daha fazla bilgi için abp.io adresini ziyaret edebilirsiniz.",
     "Exception:00001": "Girmiş olduğunuz {code} kodu daha önce kullanılmıştır.",
     "Exception:00002": "Silmeye çalıştığınız kartın işlem görmüş hareketleri var. Kart silinemez.",
@@ -382,6 +390,16 @@
     "ManageProfile": "Profilinizi Yönetin",
     "Logout": "Çıkış",
     "Login": "Giriş",
-    "DepartmentAndTermSelect": "Şube ve Dönem Seçimi"
+    "DepartmentAndTermSelect": "Şube ve Dönem Seçimi",
+    "FinancialStatusSummary": "FİNANSAL DURUM ÖZETİ",
+    "CashStatusChart": "Kasa Durum Grafiği",
+    "BankStatusChart": "Banka Durum Grafiği",
+    "PaymentTypesDistributionChart": "Ödeme Belgeleri Dağılım Grafiği",
+    "LastTenTransactionsTradedInTheCashier": "Kasada İşlem Gören Son On Hareket",
+    "LastTenTransactionsTradedInTheBank": "Bankada İşlem Gören Son On Hareket",
+    "OverdueReceivables": "Ödemesi Geciken Alacaklar",
+    "MoreInformation": "Detaylı bilgi",
+    "Reports": "Raporlar",
+    "Authorization": "Yetkilendirme"
   }
 }
